--- a/ServiceOrderManager/Views/Client/Index.cshtml
+++ b/ServiceOrderManager/Views/Client/Index.cshtml
@@ -3,7 +3,7 @@
  <div class="py-5" >
     <div class="container">
         <div class="text-center mb-5">
-            <a class="btn btn-success" asp-action="Cadastrar" asp-controller="Client">Cadastrar novo cliente</a> 
+            <a class="btn btn-success" asp-action="Enroll" asp-controller="Client">Cadastrar novo cliente</a> 
         </div>
         <div class="row row-cols-1 row-cols-md-3 g-0 ">
 
