--- a/ServiceOrderManager/Views/Client/Enroll.cshtml
+++ b/ServiceOrderManager/Views/Client/Enroll.cshtml
@@ -18,7 +18,7 @@
 
         <div class="mb-1">
             <label class="form-label mt-3">Capa:</label>
-            <input type="file" id="ImageFile" name="foto" class="form-control shadow-none" />
+            <input type="file" id="ImageFile" name="photo" class="form-control shadow-none" />
         </div>
 
         <div class="mb-1">
@@ -48,8 +48,8 @@
         @* botoes  *@
 
         <div class="btn-box d-flex mt-3">
-            <button type="submit" type="button" class="btn btn-success w-50 mx-1"><i class="bi bi-plus-circle"></i> Cadastrar!</button>
-            <a type="submit" class="btn btn-info w-50" asp-controller="Pizza" asp-action="Index"><i class="bi bi-arrow-left-circle"></i> Voltar</a>
+            <button type="submit" type="button" class="btn btn-success w-50 mx-1"><i class="bi bi-plus-circle"></i> Cadastrar </button>
+            <a type="submit" class="btn btn-info w-50" asp-controller="Pizza" asp-action="Index"><i class="bi bi-arrow-left-circle"></i> Voltar </a>
         </div>
 
 
