--- a/ServiceOrderManager/Views/Shared/_Layout.cshtml
+++ b/ServiceOrderManager/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Os" asp-action="Privacy">Ordem de serviço</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Client" asp-action="Index">Client</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Client" asp-action="Index">Clientes</a>
                         </li>
                     </ul>
                 </div>
