OS Data processing

--- a/ServiceOrderManager/Views/Shared/_Layout.cshtml
+++ b/ServiceOrderManager/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ServiceOrderManager</title>
+    <title>@ViewData["Title"] - Gerenciador de ordem de serviço</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/theme.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ServiceOrderManager.styles.css" asp-append-version="true" />
@@ -23,7 +23,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Os" asp-action="Privacy">Ordem de serviço</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Os" asp-action="Index">Ordem de serviço</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Client" asp-action="Index">Clientes</a>
