--- a/ServiceOrderManager/Views/Client/Enroll.cshtml
+++ b/ServiceOrderManager/Views/Client/Enroll.cshtml
@@ -7,10 +7,10 @@
     
     @* Fomulario *@
     
-    <form method="post" asp-action="Enroll" asp-controller="Client" enctype="multipart/form-data">
+    <form method="post" asp-action="Enroll" asp-controller="Os" enctype="multipart/form-data">
         <h2>Cadastro de Cliente</h2>
 
-        <div class="text-center">
+  @*       <div class="text-center">
             <label for="ImageFile">
                 <img id="img" style="width:150px; height:200px" />
             </label>
@@ -19,7 +19,7 @@
         <div class="mb-1">
             <label class="form-label mt-3">Capa:</label>
             <input type="file" id="ImageFile" name="photo" class="form-control shadow-none" />
-        </div>
+        </div> *@
 
         <div class="mb-1">
             <label class="form-label">Nome:</label>
@@ -49,7 +49,7 @@
 
         <div class="btn-box d-flex mt-3">
             <button type="submit" type="button" class="btn btn-success w-50 mx-1"><i class="bi bi-plus-circle"></i> Cadastrar </button>
-            <a type="submit" class="btn btn-info w-50" asp-controller="Pizza" asp-action="Index"><i class="bi bi-arrow-left-circle"></i> Voltar </a>
+            <a type="submit" class="btn btn-info w-50" asp-controller="Client" asp-action="Index"><i class="bi bi-arrow-left-circle"></i> Voltar </a>
         </div>
 
 
